# dl_nlp

./: .gitignore  .nojekyll  _quarto.yml  about.html  about.qmd  dl.html  dl.qmd  dl_des.html  dl_des.qmd  dl_hf.html  dl_lab1.html  dl_lab1.qmd  dl_lab10.html  dl_lab10.qmd  dl_lab2.html  dl_lab2.qmd  dl_lab3.html  dl_lab3.qmd  dl_lab4.html  dl_lab4.qmd  dl_lab5.html  dl_lab5.qmd  dl_lab6.html  dl_lab6.qmd  dl_lab7.html  dl_lab7.qmd  dl_lab8.html  dl_lab8.qmd  dl_lab9.html  dl_lab9.qmd  dl_lec1-speaker.html  dl_lec1.html  dl_lec1.qmd  dl_lec10-speaker.html  dl_lec10.html  dl_lec10.qmd  dl_lec10_extra.html  dl_lec10_extra.qmd  dl_lec11-speaker.html  dl_lec11.html  (+91 more)
exam/NLP/: Makarova_Lab6.html  Makarova_lab3_NLP.html  Makarova_lab7.html  Makarova_lab8.html  Makarova_lab9.html
nb/: Logistic_Regression_with_a_Neural_Network_mindset.html  Optimization_methods.html  Untitled.html  dl_lab6.html  nlp_lab2.html  nlp_lab3-preview.html  nlp_lab3.html  nlp_lab3.out.ipynb  nlp_lab8.html
nb/W2A2/: Logistic_Regression_with_a_Neural_Network_mindset.html
nb/W3A1/: Planar_data_classification_with_one_hidden_layer.html
nb/dl_lab1/: Logistic_Regression_with_a_Neural_Network_mindset.html
nb/dl_lab2/: Planar_data_classification_with_one_hidden_layer.html
nb/dl_lab3/: Building_your_Deep_Neural_Network_Step_by_Step.html  Initialization_Regularization.html
nb/dl_lab4/: Initialization_Regularization.html  (+1 more)
resources/: dl_rastrigin.html  dl_rosenbrock.html  init.html  initialization.html
test/: list.html  questions-intro-to-specialty.html  questions-midterm.html  questions.html
(+93 files in other folders)
